src/stylesheets/style.scss
/* ... */
.download-icon-2 {
    display: inline-block;
    padding-right: 150px;
    svg {
        width: 30px;
        height: 30px;
        cursor: default;
        path {
            stroke: black;
        }

        &:hover path {
            stroke: #006fff;
            cursor: pointer;
        }
    }
}

//

/* Used to transform black SVGs to white SVGs, as well as displaying them inline*/
.white-icon {
    width: 32px;
    height: 32px;
    display: inline-block;
    position: relative;
    margin-left: 15px;
    filter: invert(88%) sepia(67%) saturate(0%) hue-rotate(236deg)
        brightness(111%) contrast(100%);
}

.topnav {
    display: flex;
    background: #f0eeeece;
    height: auto;
    width: auto;
    -webkit-appearance: none;
    margin-bottom: 10px;
}

/* Change the color of links on hover */
.topnav a:hover {
    color: black;
}

/* Style the search box inside the navigation bar */
.topnav input[type="input"] {
    -webkit-appearance: none;
    padding: 10px;
    padding-bottom: 9px;
    border: 2px black;
    margin-top: 8px;
    margin-bottom: 8px;
    margin-left: 30%;
    width: 35%;
    font-size: 14px;
    font-family: "Roboto", Arial, sans-serif;
    border-radius: 15px 0 0 15px;
}
.topnav a[type="submit"] {
    padding-top: 10px;
    background: white;
    //margin-right: 35%;
    margin-top: 8px;
    margin-bottom: 8px;
    color: grey;
    border-right: 1px solid grey !important;
    padding-right: 8px;
    height: auto;
    width: auto;
    border: none;
    text-shadow: none;
    -moz-appearance: none;
    appearance: none;
}
.topnav > a > svg {
    padding-bottom: 8px;
}

.topnav > select {
    background: white;
    margin-top: 8px;
    margin-bottom: 8px;
    color: grey;
    border-radius: 0 15px 15px 0;
    border-color: #f0eeeece;
    border-left: 1px;
    height: 35px;
    width: 200px;
    border: none;
    font: 14px arial, sans-serif;
    text-shadow: none;
    -moz-appearance: none;
    appearance: none;
}

/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
@media screen and (max-width: 600px) {
    .topnav a,
    .topnav input[type="input"] {
        float: none;
        display: block;
        text-align: left;
        width: 100%;
        margin: 0;
        padding: 14px;
    }
    .topnav input[type="input"] {
        border: 1px solid #ccc;
    }
}

.block-detail-container {
    overflow-y: scroll;
    padding: 8px;
    flex: 1;
}

.browse-container {
    overflow-y: scroll;
    padding: 8px;
    flex: 1;
}

.uk-tooltip {
    word-wrap: break-word;
}

@media only screen and (max-width: 1000px) {
    div.block-infos {
        flex-direction: column;
    }
    div.block-detail-container {
        flex: none;
    }
    div.browse-container {
        flex: none;
    }
}

#progress-bar-container {
    align-self: center;
    flex-direction: row;
    width: 80%;
}

#progress-bar {
    height: 30px;
    z-index: 1;
    background-color: #4caf50;
}

#text-bar {
    position: relative;
    z-index: 2;
    padding: 10px;
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-size: 150%;
    text-align: center;
    color: black;
}

.load-container {
    display: flex;
    flex-direction: column;
    align-content: center;
    background-color: rgb(255, 255, 255);
    color: black;
    min-height: 200px;
}

.div-load {
    top: 30%;
    align-self: center;
    align-content: center;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.blocks-container {
    display: flex;
    flex-direction: row;
    margin-bottom: 10;
    padding: 0 10px;
    height: 200px;
}

.mover {
    fill: grey;
    height: 6px;
    pointer-events:all;
    cursor:pointer;
}

#last-container {
    display: flex;
    margin-left: 35px;
    padding-left: 50px;
    padding-right: 50px;
    background-color: white;
    animation: 2s ease-out 2s 1 slideInFromRight;
    background: white;
    animation-direction: reverse;
    overflow: hidden;
    padding-right: 40px;
    padding-left: 40px;
    width: 316.11111px;
    border-left-color: gray;
    border-left-width: 1px;
    border-left-style: solid;
}

@keyframes slideInFromRight {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(100%);
    }
}

.last-added {
    left: 0;
}

#status {
    outline: groove rgba(204, 204, 204, 0.3);
    margin: 10px;
}

#node-table {
    width: 400px;
    
}
//zoom-in & out button
.dropdown {
    position:relative;
    right: 83%;
    top: 20px;
    width: 25px;
    height: 25px;
    border: 1px solid gray;
    
}
.dropdown:hover {
    border-color: #006fff;
}

.zoombtn {
    position: relative;
    width: 100%;
    height: 100%;
    background-color:white;
    border: none;
    cursor: pointer;
}


#svg-zoombtn {
    width: 30px;
    height: 30px;
    max-width:none;

}

.dropdown-zoom{
    position:relative;
    display:inline-block;
}

.dropdown-zoom-content {
    display:none;
    position: absolute;
    top: 30px;
    left: 10px;
    background-color: #ffffff;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    cursor: pointer;
}
.dropdown-zoom-content p {
    display: block;
    font-size: small;
    width: max-content;
}
.dropdown-zoom-content p:hover {
    color:#006fff;
}

.show {display: block;}

#svg-container {
    display: flex;
    flex-direction: row;
    //width:100%;
    width: 90vw; //addition was 100% before
    //max-width:none; //addition

}
::-webkit-scrollbar {
    widows: 25px;
}
::-webkit-scrollbar-track {
    border: 7px solid #232943;
    box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.35);
}

::-webkit-scrollbar-thumb {
    background: pink;
    border-radius: 3px;
}

.uk-open {
    background-color: #ffffff;
}

.description {
    width: 30%;
    left: 50% !important;
    text-align: justify;
    text-justify: inter-word;
    transform: translateX(-50%);
}
/* ... */

